--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "scripts": {
     "start": "nodemon index.js",
     "configure": "./bin/configuredb.sh"
+  },
+  "dependencies": {
+    "pg": "^8.0.3"
   }
 }
